# tracker

./: Cargo.toml  Rocket.toml  index.html  package.json  settings.json  vue.config.js
client/: App.vue  main.js  router.js
migrations/2019-05-11-081518_create_servers/: up.sql
migrations/2019-05-11-082450_create_server_snapshots/: down.sql  up.sql
src/: lib.rs  main.rs  minecraft.rs  models.rs  schema.rs
src/routes/: get.rs
