[package]
name = "traak"
version = "0.1.0"
authors = ["BizarreAlex <contact@bizarrealex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.0"
rocket_contrib = "0.4.0"
config = "0.9"
diesel = { version = "1.0.0", features = ["sqlite", "chrono"] }
dotenv = "0.9.0"
bytebuffer = "0.2.0"
chrono = "0.4"
integer-encoding = "1.0.5"
json = "0.11.13"
trust-dns-resolver = "^0.9"